--- a/conf/configs.yaml
+++ b/conf/configs.yaml
@@ -26,7 +26,7 @@ datamodule:
     num_workers: 0
 
 model:
-  num_classes: -1 
+  num_classes: -1
   encoder_dim: 144
   decoder_output_dim: ${model.encoder_dim}
   hidden_state_dim: 320
@@ -50,20 +50,18 @@ model:
   grad_ckpt_batchsize: 4
 
 training:
-  lr: 0.001
   batch_size: 24
   max_epoch: 50
 
 optim:
-  betas: [0.9, 0.98]
+  betas: [ 0.9, 0.98 ]
   weight_decay: 1e-3
-
-sched:
 
 
 lr_scheduler:
-  scheduler_name: WarmupLR
-  gamma : 0.1
+  lr: 0.001
+#  scheduler_name: None
+  gamma: 0.1
   last_epoch: ${training.max_epoch}
 
   num_warmup_steps: 4000
