--- a/conf/configs.yaml
+++ b/conf/configs.yaml
@@ -26,34 +26,41 @@ datamodule:
     num_workers: 0
 
 model:
-  num_classes: -1
-  encoder_dim: 144
+  num_classes: ??
+  input_dim: 80
+  encoder_dim: 512
+  num_encoder_layers: 12
+  num_attention_heads: 8
+  feed_forward_expansion_factor: 4
+  conv_expansion_factor: 2
+  input_dropout_p: 0.1
+  feed_forward_dropout_p: 0.1
+  attention_dropout_p:  0.1
+  conv_dropout_p: 0.1
+  conv_kernel_size: 31
+  half_step_residual: True
+
   decoder_output_dim: ${model.encoder_dim}
   hidden_state_dim: 320
   decoder_num_layers: 1
-  input_dim: 201 # n_fft // 2 + 1
-  num_heads: 4
-  num_layers: 16
-  conv_kernel_size: 31
-  feed_forward_expansion_factor: 4
-  conv_expansion_factor: 2
-  dropout: 0.1
-  half_step_residual: True
-  subsampling_factor: 4
+
   freq_masks: 2
   time_masks: 10
   freq_width: 27
   time_width: 0.05
+
   rnn_type: lstm
   sos_id: 1
   eos_id: 2
+
   grad_ckpt_batchsize: 4
 
 training:
   batch_size: 24
   max_epoch: 50
 
-optim:
+optimizer:
+  optimizer_name: adam
   betas: [ 0.9, 0.98 ]
   weight_decay: 1e-3
 
@@ -61,7 +68,7 @@ optim:
 lr_scheduler:
   lr: 0.001
 #  scheduler_name: None
-  gamma: 0.1
+#  gamma: 0.1
   last_epoch: ${training.max_epoch}
 
   num_warmup_steps: 4000
@@ -77,6 +84,8 @@ trainer:
   accelerator: auto
   detect_anomaly: True
   accumulate_grad_batches: 8
+  gradient_clip_val: 5.0
+
 
 ckpt:
   have_ckpt: False
