--- a/conf/configs.yaml
+++ b/conf/configs.yaml
@@ -1,33 +1,27 @@
 datasets:
-  librispeech:
-    clean_path: /data_disk/zlf/dataloder/LibriSpeech/
-    other_path: /data_disk/zlf/dataloder/LibriSpeech/
-    n_fft: 400
-    train: train100
-    val: dev
-    test: test_module
+  only_one_set: False
+  manifest_path: /data_disk/zlf/code/jModel/conformer-rnnt/manifest/
+  dataset_path: /datasets/aishell/data_aishell/
+  feature_types: fbank
+  num_mel_bins: 80
+  spec_agument: True
 
-  aishell:
-    manifest_path: /data_disk/zlf/code/jModel/conformer-rnnt/manifest/
 
-  dataset_selected: aishell
-
-text_process:
+tokenizer:
   lang: zh
-  word_dict_path: /data_disk/zlf/code/jModel/conformer-rnnt/word_dict.txt
+  word_dict_path: D:\model\rnn-t\manifest\vocab.txt
 
 datamodule:
-  aishell:
-    batch_size: ${training.batch_size}
-    num_workers: 0
+  batch_size: ${training.batch_size}
+  num_workers: 0
 
-  librispeech:
-    batch_size: ${training.batch_size}
-    num_workers: 0
+logger:
+  save_dir: tb_logs
+  name: model_logs
 
 model:
   num_classes: ??
-  input_dim: 80
+  input_dim: 80 # 80 for fbank
   encoder_dim: 512
   num_encoder_layers: 12
   num_attention_heads: 8
@@ -35,7 +29,7 @@ model:
   conv_expansion_factor: 2
   input_dropout_p: 0.1
   feed_forward_dropout_p: 0.1
-  attention_dropout_p:  0.1
+  attention_dropout_p: 0.1
   conv_dropout_p: 0.1
   conv_kernel_size: 31
   half_step_residual: True
@@ -55,6 +49,7 @@ model:
 
   grad_ckpt_batchsize: 4
 
+
 training:
   batch_size: 24
   max_epoch: 50
@@ -67,16 +62,14 @@ optimizer:
 
 lr_scheduler:
   lr: 0.001
-#  scheduler_name: None
-#  gamma: 0.1
+  #  scheduler_name: None
+  #  gamma: 0.1
   last_epoch: ${training.max_epoch}
 
   num_warmup_steps: 4000
   num_training_steps: 100000
 
-tb_logger:
-  save_dir: tb_logs
-  name: conformer_logs
+
 
 trainer:
   max_epochs: ${training.max_epoch}
