--- a/conf/configs.yaml
+++ b/conf/configs.yaml
@@ -1,12 +1,15 @@
+training:
+  do_train: True
+  checkpoint_path:
+  batch_size: 24
+  max_epoch: 50
+
 datamodule:
   dataset:
     dataset_path: E:/datasets/LibriSpeech
     feature_types: fbank
     num_mel_bins: 80
-    sample_rate: 16000
-
-  #    spec_agument: True
-  #    noise_augment: True
+    sample_rate: 1600
 
   batch_size: ${training.batch_size}
   one_dataset: False
@@ -17,52 +20,53 @@ datamodule:
 
 tokenizer:
   lang: zh
-  word_dict_path: D:\model\rnn-t\manifest\vocab.txt
+  word_dict_path: D:\model\rnn-t\libriSpeech_manifest\vocab.txt
 
 logger:
   root_dir: tb_logs
   name: model_logs
 
 model:
-  num_classes: ??
-  input_dim: 80 # 80 for fbank
-  encoder_dim: 512
-  num_encoder_layers: 12
-  num_attention_heads: 8
-  feed_forward_expansion_factor: 4
-  conv_expansion_factor: 2
-  input_dropout_p: 0.1
-  feed_forward_dropout_p: 0.1
-  attention_dropout_p: 0.1
-  conv_dropout_p: 0.1
-  conv_kernel_size: 31
-  half_step_residual: True
+  encoder:
+    num_classes: ??
+    input_dim: 80
+    encoder_dim: 512
+    num_encoder_layers: 2
+    num_attention_heads: 8
+    feed_forward_expansion_factor: 4
+    conv_expansion_factor: 2
+    input_dropout_p: 0.1
+    feed_forward_dropout_p: 0.1
+    attention_dropout_p: 0.1
+    conv_dropout_p: 0.1
+    conv_kernel_size: 31
+    half_step_residual: True
+    joint_ctc_attention: False
 
-  decoder_output_dim: ${model.encoder_dim}
-  hidden_state_dim: 320
-  decoder_num_layers: 1
-
-  freq_masks: 2
-  time_masks: 10
-  freq_width: 27
-  time_width: 0.05
-
-  rnn_type: lstm
+  pad_id: 0
   sos_id: 1
   eos_id: 2
+  blank_id: 3
+  unk_id: 4
 
   grad_ckpt_batchsize: 4
 
-
-training:
-  batch_size: 24
-  max_epoch: 50
+trainer:
+  accelerator: auto
+  max_epochs: ${training.max_epoch}
+  check_val_every_n_epoch: 5
+  log_every_n_steps: 100
+  accumulate_grad_batches: 8
+  gradient_clip_val: 5.0
+  gradient_clip_algorithm: norm
+  detect_anomaly: True
+#  sync_batchnorm: True
+#  default_root_dir: ./logs
 
 optimizer:
   optimizer_name: adam
   betas: [ 0.9, 0.98 ]
   weight_decay: 1e-3
-
 
 lr_scheduler:
   lr: 0.001
@@ -71,16 +75,4 @@ lr_scheduler:
   last_epoch: ${training.max_epoch}
 
 
-trainer:
-  max_epochs: ${training.max_epoch}
-  enable_progress_bar: True
-  accelerator: auto
-  detect_anomaly: True
-  accumulate_grad_batches: 8
-  gradient_clip_val: 5.0
 
-ckpt:
-  have_ckpt: False
-  ckpt_path: "/data_disk/zlf/code/jModel/conformer-rnnt//checkpoint/conformer_rnnt.ckpt"
-  save_path: "/data_disk/zlf/code/jModel/conformer-rnnt//checkpoint/conformer_rnnt_common.ckpt"
-  train: True
