--- a/conf/configs.yaml
+++ b/conf/configs.yaml
@@ -3,6 +3,8 @@ training:
   checkpoint_path:
   batch_size: 24
   max_epoch: 50
+  optimizer_name: adam
+  lr_scheduler_name:
 
 datamodule:
   dataset:
@@ -12,7 +14,7 @@ datamodule:
     sample_rate: 1600
 
   batch_size: ${training.batch_size}
-  one_dataset: False
+  one_dataset: True
   val_set_ratio: 0.05
   test_set_ratio: 0.05
   num_workers: 0
@@ -23,7 +25,7 @@ tokenizer:
   word_dict_path: D:\model\rnn-t\libriSpeech_manifest\vocab.txt
 
 logger:
-  root_dir: tb_logs
+  save_dir: tb_logs
   name: model_logs
 
 model:
@@ -64,14 +66,12 @@ trainer:
 #  default_root_dir: ./logs
 
 optimizer:
-  optimizer_name: adam
-  betas: [ 0.9, 0.98 ]
+  lr: 0.001
+  betas: [0.9, 0.98]
   weight_decay: 1e-3
 
 lr_scheduler:
-  lr: 0.001
-  #  scheduler_name: None
-  #  gamma: 0.1
+  gamma: 0.1
   last_epoch: ${training.max_epoch}
 
 
