--- a/conf/conformer_ctc_configs.yaml
+++ b/conf/conformer_ctc_configs.yaml
@@ -31,17 +31,17 @@ datamodule:
     spec_trim_conf:
       max_t: 50
 
-  dataset_path: E:/datasets/data_thchs30
+  dataset_path: /data_disk/zlf/datasets/aishell/data_aishell/
   batch_size: ${training.batch_size}
   one_dataset: True
   val_set_ratio: 0.05
   test_set_ratio: 0.05
   num_workers: 0
-  manifest_path: D:/model/rnn-t/manifests/thchs30_manifest/
+  manifest_path: /data_disk/zlf/code/jModel/SpeechNet/manifests/aishell_chars
 
 tokenizer:
   lang: zh
-  word_dict_path: D:/model/rnn-t/manifests/thchs30_manifest/vocab.txt
+  word_dict_path: /data_disk/zlf/code/jModel/SpeechNet/manifests/aishell_chars
 
 logger:
   save_dir: ../tb_logs
@@ -74,7 +74,7 @@ model:
 trainer:
   accelerator: auto
   max_epochs: ${training.max_epoch}
-  check_val_every_n_epoch: 5
+  check_val_every_n_epoch: 1
   log_every_n_steps: 100
   accumulate_grad_batches: 8
   gradient_clip_val: 4.0
