adjust hyper-parameter

--- a/conf/conformer_ctc_configs.yaml
+++ b/conf/conformer_ctc_configs.yaml
@@ -1,7 +1,7 @@
 training:
   do_train: True
   checkpoint_path: # ../checkpoints/**.ckpt
-  batch_size: 24
+  batch_size: 20
   max_epoch: 50
   optimizer_name: adam
   lr_scheduler_name: exponential_lr
@@ -44,7 +44,7 @@ tokenizer:
   word_dict_path: /data_disk/zlf/code/jModel/SpeechNet/manifests/aishell_chars/vocab.txt
 
 logger:
-  save_dir: ../tb_logs
+  save_dir: ./tb_logs
   name: conformer_ctc
 
 model:
@@ -74,13 +74,16 @@ model:
 trainer:
   accelerator: auto
   max_epochs: ${training.max_epoch}
-  check_val_every_n_epoch: 1
-  log_every_n_steps: 100
+  check_val_every_n_epoch: 5
+  log_every_n_steps: 50
   accumulate_grad_batches: 8
   gradient_clip_val: 4.0
   gradient_clip_algorithm: norm
   detect_anomaly: True
-  default_root_dir: ../checkpoints
+  default_root_dir: ./checkpoints
+#  auto_lr_find: True
+#  auto_scale_batch_size: binsearch
+#  precision: 32
 #  sync_batchnorm: True
 
 optimizer:
