--- a/conf/conformer_ctc_attention_configs.yaml
+++ b/conf/conformer_ctc_attention_configs.yaml
@@ -51,7 +51,7 @@ model:
   num_classes: ??
   encoder:
     input_dim: ${datamodule.dataset.num_mel_bins}
-    encoder_dim: 512
+    encoder_dim: 256
     num_encoder_layers: 12
     num_attention_heads: 8
     feed_forward_expansion_factor: 4
@@ -63,12 +63,20 @@ model:
     conv_kernel_size: 31
     half_step_residual: True
     joint_ctc_attention: False
+  decoder:
+    d_model: 256
+    d_ff: 2048
+    num_layers: 6
+    num_heads: 8
+    dropout_p: 0.1
 
+  lsm_weight: 0.1
   pad_id: 0
   sos_id: 1
   eos_id: 2
   blank_id: 3
   unk_id: 4
+
   grad_ckpt_batchsize: 4
 
 trainer:
@@ -88,7 +96,6 @@ trainer:
 
 optimizer:
   lr: 0.001
-  betas: [ 0.9, 0.98 ]
   weight_decay: 1e-3
 
 lr_scheduler:
