--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ omegaconf==2.3.0
 PySoundFile==0.9.0.post1
 pytorch_lightning==2.0.1.post0
 soundfile==0.12.1
-torch==2.0.0
-torchaudio==2.0.1
-torchmetrics==0.11.4
+torch
+torchaudio
+torchmetrics
