--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-hydra-core==1.3.2
-ipython==8.12.0
-jieba==0.42.1
-librosa==0.10.0.post2
-matplotlib==3.7.1
-numpy==1.24.2
-omegaconf==2.3.0
-PySoundFile==0.9.0.post1
-pytorch_lightning==2.0.1.post0
-soundfile==0.12.1
+hydra-core
+ipython
+jieba
+librosa
+matplotlib
+numpy
+omegaconf
+PySoundFile
+pytorch_lightning
+soundfile
 torch
 torchaudio
 torchmetrics
+tensorboard
